[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/GraphicNodes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/sprite3-stripped-000.png" type="Texture" id=2]
[ext_resource path="res://assets/images/sprite3-normal-000.png" type="Texture" id=3]
[ext_resource path="res://assets/images/sprite3-covering-000.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/josefinsans-bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/UI/textbox.png" type="Texture" id=6]
[ext_resource path="res://assets/images/UI/gallerynumberright-animation 1-000.png" type="Texture" id=7]
[ext_resource path="res://assets/images/UI/key-animation 1-000.png" type="Texture" id=8]
[ext_resource path="res://assets/images/localUI/EN/angeb4-animation 1-000.png" type="Texture" id=9]
[ext_resource path="res://assets/images/localUI/EN/angeb2-animation 1-000.png" type="Texture" id=10]
[ext_resource path="res://assets/images/localUI/EN/angeb1-animation 1-000.png" type="Texture" id=11]
[ext_resource path="res://assets/images/localUI/EN/angeb3-animation 1-000.png" type="Texture" id=12]
[ext_resource path="res://scripts/Secret_Ange.gd" type="Script" id=13]
[ext_resource path="res://assets/images/UI/hideui-animation 1-000.png" type="Texture" id=14]
[ext_resource path="res://assets/images/UI/hideui-animation 1-001.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "strip",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "cover",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 616, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "hover1"
length = 3.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 616, -0.25, 0, 0.25, 0, 616, -0.25, 0, 0.25, 0, 616, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.25, 0, 396, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=13]
resource_name = "hover2"
length = 1.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 616, -0.25, 0, 0.25, 0, 616, -0.25, 0, 0.25, 0, 616, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.25, 0, 396, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.5 )
}

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "invisible"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "shown",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, 824 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "falling"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -104 ), Vector2( 120, 824 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "inactive"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1477, 267 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Secret_Ange" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" parent="." instance=ExtResource( 1 )]
animation = "ange"

[node name="ange_s" type="AnimatedSprite" parent="."]
position = Vector2( 616, 416 )
scale = Vector2( 0.55, 0.55 )
frames = SubResource( 1 )

[node name="hover" type="AnimationPlayer" parent="ange_s"]
autoplay = "hover1"
method_call_mode = 1
anims/RESET = SubResource( 3 )
anims/hover1 = SubResource( 2 )
anims/hover2 = SubResource( 13 )

[node name="dialogue" type="Node2D" parent="."]

[node name="box_s" type="Sprite" parent="dialogue"]
modulate = Color( 1, 0.788235, 0.419608, 1 )
position = Vector2( 640, 599 )
texture = ExtResource( 6 )

[node name="box_t" type="Label" parent="dialogue"]
margin_left = 176.0
margin_top = 536.0
margin_right = 1120.0
margin_bottom = 672.0
custom_fonts/font = SubResource( 4 )
text = "TEXT HERE HOLY SHIT"
autowrap = true

[node name="box_b" type="Button" parent="dialogue"]
margin_left = 192.0
margin_top = 512.0
margin_right = 1088.0
margin_bottom = 704.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="next" type="Sprite" parent="dialogue"]
modulate = Color( 0.99, 1, 0.8, 1 )
position = Vector2( 1080, 656 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 7 )

[node name="indecator" type="AnimationPlayer" parent="dialogue/next"]
autoplay = "invisible"
anims/RESET = SubResource( 5 )
anims/blink = SubResource( 6 )
anims/invisible = SubResource( 7 )

[node name="hide_ui_s" type="AnimatedSprite" parent="."]
position = Vector2( 1216, 640 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 14 )
animation = "shown"

[node name="hide_ui" type="Button" parent="."]
margin_left = 1152.0
margin_top = 576.0
margin_right = 1280.0
margin_bottom = 720.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true

[node name="choices" type="Node2D" parent="."]
visible = false

[node name="overlay" type="ColorRect" parent="choices"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.686275 )

[node name="advice_s" type="Sprite" parent="choices"]
position = Vector2( 640, 166 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="advice_b" type="Button" parent="choices"]
margin_left = 288.0
margin_top = 120.0
margin_right = 992.0
margin_bottom = 216.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="compliment_s" type="Sprite" parent="choices"]
position = Vector2( 640, 295 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="compliment_b" type="Button" parent="choices"]
margin_left = 288.0
margin_top = 248.0
margin_right = 992.0
margin_bottom = 344.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="game_s" type="Sprite" parent="choices"]
position = Vector2( 640, 425 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="game_b" type="Button" parent="choices"]
margin_left = 288.0
margin_top = 376.0
margin_right = 992.0
margin_bottom = 472.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="strip_s" type="Sprite" parent="choices"]
visible = false
position = Vector2( 640, 554 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="strip_b" type="Button" parent="choices"]
visible = false
margin_left = 288.0
margin_top = 504.0
margin_right = 992.0
margin_bottom = 600.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="key_s" type="Sprite" parent="choices"]
position = Vector2( 120, 824 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="fall" type="AnimationPlayer" parent="choices/key_s"]
autoplay = "inactive"
anims/RESET = SubResource( 8 )
anims/falling = SubResource( 9 )
anims/inactive = SubResource( 10 )

[node name="spin" type="AnimationPlayer" parent="choices/key_s"]
autoplay = "spin"
anims/RESET = SubResource( 11 )
anims/spin = SubResource( 12 )

[node name="key_b" type="Button" parent="choices/key_s"]
margin_left = -202.0
margin_top = -198.0
margin_right = 198.0
margin_bottom = 202.0
action_mode = 0
flat = true

[connection signal="pressed" from="dialogue/box_b" to="." method="_on_box_b_pressed"]
[connection signal="toggled" from="hide_ui" to="." method="_on_hide_ui_toggled"]
[connection signal="pressed" from="choices/advice_b" to="." method="_on_advice_b_pressed"]
[connection signal="pressed" from="choices/compliment_b" to="." method="_on_compliment_b_pressed"]
[connection signal="pressed" from="choices/game_b" to="." method="_on_game_b_pressed"]
[connection signal="pressed" from="choices/strip_b" to="." method="_on_strip_b_pressed"]
[connection signal="pressed" from="choices/key_s/key_b" to="." method="_on_key_b_pressed"]
